Add My posts(img, text, likes) and entry field for text post

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
     grid-area: h;
-    position: sticky;
+    /*position: sticky;*/
     top: 0;
-    background-color: rgba(68,72,255,0.7)
+    background-color: #7a7cff;
 }
 
 .header img {
