Create request for API (get users), fix tests for usersReducer, apply settings in WS(semicolon and quotes)

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -14,7 +14,7 @@
 }
 
 .item a.active {
-    color: rgba(248,111,255,0.8);
+    color: rgba(248, 111, 255, 0.8);
     font-size: 22px;
     font-weight: bolder;
 }
