--- a/src/components/Dialogs/Message/Message.module.css
+++ b/src/components/Dialogs/Message/Message.module.css
@@ -4,7 +4,7 @@
 
 .message {
     border-radius: 12px;
-    background: rgba(255,123,231,0.7);
+    background: rgba(255, 123, 231, 0.7);
     position: relative;
     margin: 10px;
     border-bottom-left-radius: 0;
@@ -18,7 +18,7 @@
     bottom: 0;
     left: 0;
     transform: translateX(-100%);
-    background: radial-gradient(circle at 0 0, transparent, transparent 72%, rgba(255,123,231,0.7) 72%);
+    background: radial-gradient(circle at 0 0, transparent, transparent 72%, rgba(255, 123, 231, 0.7) 72%);
 }
 
 .avatar {
