Show specific user profile in Profile Page (withRouter)

--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,17 @@
 img.cover {
     height: 400px;
 }
+
+.descriptionBlock {
+    display: flex;
+}
+
+.userPhoto {
+    margin-right: 10px;
+    width: 300px;
+}
+
+.statusJob img {
+    border-radius: 75px;
+    width: 150px;
+}
